--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "active-route-flow-router",
   "version": "0.0.1",
   "description": "Flow-Router adapter for active-route",
-  "main": "lib/activeroute-flowrouter.js",
+  "main": "package.js",
   "devDependencies": {
     "eslint": "^2.11.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.3.0",
     "eslint-plugin-meteor": "^3.6.0"
   },
   "repository": {
