--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-meteor": "^3.6.0"
+    "babel-eslint": "^7.1.1",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-es2017": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
   },
   "repository": {
     "type": "git",
