--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "babel-eslint": "^8.0.1",
     "eslint": "^4.9.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-meteor": "^4.1.6",
     "eslint-plugin-no-use-extend-native": "^0.3.12",
     "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "flow-bin": "^0.57.3"
+    "eslint-plugin-prettier": "^2.3.1",
+    "flow-bin": "^0.57.3",
+    "prettier": "^1.7.4"
   },
   "homepage": "https://github.com/meteor-activeroute/flow-router",
   "license": "MIT",
